# Lab6Backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  llms.txt  openapi.yaml
src/: main.rs  models.rs  routes.rs
