[package]
name = "series-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "macros", "sqlite", "migrate"] }
dotenv = "0.15"
uuid = "1.4"
tokio = { version = "1", features = ["macros"] }